--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "ztx <tianxiong.zhao@karakal.com.cn>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.8",
+    "@types/node": "^14.0.27",
+    "jest": "^26.2.2",
+    "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
@@ -14,6 +18,7 @@
   },
   "scripts": {
     "serve": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   }
 }
